# multipass

./: Main.hs  multipass.cabal
Data/: Pass.hs
Data/Pass/: Accelerant.hs  Accelerated.hs  Calc.hs  Calculation.hs  Call.hs  Class.hs  Env.hs  Estimator.hs  Eval.hs  Fold.hs  Fun.hs  Key.hs  L.hs  Named.hs  Ordered.hs  Prep.hs  Robust.hs  Step.hs  Thrist.hs  Trans.hs  Type.hs  Util.hs
Data/Pass/Eval/: Naive.hs
Data/Pass/Fold/: Env.hs  Key.hs
Data/Pass/L/: By.hs  Estimator.hs
Data/Pass/Monoid/: Ord.hs
Data/Pass/Util/: Beta.hs
examples/: Pass.hs
