name:          multipass
category:      Control
version:       0.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/multipass/
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Folding data with multiple named passes
description:   Folding data with multiple named passes
build-type:    Simple

extra-source-files: examples/Pass.hs

source-repository head
  type: git
  location: git://github.com/ekmett/multipass.git

library
  other-extensions: GADTs, ScopedTypeVariables, Rank2Types

  build-depends:
    ghc-prim,
    base                 >= 4     && < 5,
    hashable             >= 1.1   && < 1.2,
    newtype              >= 0.2   && < 0.3,
    unordered-containers >= 0.2.1 && < 0.3

  exposed-modules:
    Data.Pass
    Data.Pass.Calc
    Data.Pass.Calculation
    Data.Pass.Call
    Data.Pass.Class
    Data.Pass.Env
    Data.Pass.Eval
    Data.Pass.Eval.Naive
    Data.Pass.Fun
    Data.Pass.Key
    Data.Pass.Named
    Data.Pass.Prep
    Data.Pass.Thrist
    Data.Pass.Trans
    Data.Pass.Type

  ghc-options: -Wall
